fix: Unique file name method is missing the period '.' between file name and extension.